--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       # - WG_PRE_DOWN=echo "Pre Down" > /etc/wireguard/pre-down.txt
       # - WG_POST_DOWN=echo "Post Down" > /etc/wireguard/post-down.txt
       
-    image: cakr4/wg-easy
+    image: peterlewis/wg-easy
     container_name: wg-easy
     volumes:
       - etc_wireguard:/etc/wireguard
