--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,4 +37,4 @@ jobs:
       with:
         push: true
         platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
-        tags: cakr4/wg-easy:latest, peterlewis/wg-easy:${{ env.RELEASE }}
+        tags: cakr4/wg-easy:latest, cakr4/wg-easy:${{ env.RELEASE }}
