--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       # ⚠️ Required:
       # Change this to your host's public address
-      - WG_HOST=5.161.108.28
+      - WG_HOST=localhost
 
       # Optional:
       # - PASSWORD=foobar123
