--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       # ⚠️ Required:
       # Change this to your host's public address
-      - WG_HOST=23.88.96.142
+      - WG_HOST=nbg-dc.securefast.app
 
       # Optional:
       # - PASSWORD=foobar123
@@ -27,7 +27,6 @@ services:
       - etc_wireguard:/etc/wireguard
     ports:
       - "51820:51820/udp"
-      - "51821:51821/tcp"
     restart: unless-stopped
     cap_add:
       - NET_ADMIN
@@ -35,3 +34,15 @@ services:
     sysctls:
       - net.ipv4.ip_forward=1
       - net.ipv4.conf.all.src_valid_mark=1
+  nginx:
+    image: nginx
+    restart: unless-stopped
+    ports:
+      - "51821:51821"
+
+  cf-tunnel:
+    image: cloudflare/cloudflared:latest
+    restart: unless-stopped
+    command: tunnel --no-autoupdate run
+    environment:
+      - TUNNEL_TOKEN=eyJhIjoiYmRmNTBiNDJhNTljMWU5Y2U3ODllNjJhMzYyYWU5OTIiLCJ0IjoiZjlhZWU2MjMtNDI0Ni00YWUyLWJkMDAtNGJjZThhMzhmZmMyIiwicyI6Ik9UZ3pNekJtWlRVdE9UWmpaQzAwTTJGaExXSTVabVV0TW1Jd05HSXpaVFV3T0RWaCJ9
