--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     environment:
       # ⚠️ Required:
       # Change this to your host's public address
-      - WG_HOST=23.88.96.142
+      - WG_HOST=91.236.230.55
 
       # Optional:
-      # - PASSWORD=foobar123
+      # - PASSWORD=basjuh123
       # - WG_PORT=51820
       # - WG_DEFAULT_ADDRESS=10.8.0.x
       # - WG_DEFAULT_DNS=1.1.1.1
@@ -35,15 +35,16 @@ services:
     sysctls:
       - net.ipv4.ip_forward=1
       - net.ipv4.conf.all.src_valid_mark=1
-  # nginx:
-  #   image: nginx
-  #   restart: unless-stopped
-  #   ports:
-  #     - "51821:51821"
 
-  # cf-tunnel:
-  #   image: cloudflare/cloudflared:latest
-  #   restart: unless-stopped
-  #   command: tunnel --no-autoupdate run
-  #   environment:
-  #     - TUNNEL_TOKEN=
+  #nginx:
+   # image: nginx
+   # restart: unless-stopped
+   # ports:
+   #   - "51821:51821"
+
+  cf-tunnel:
+    image: cloudflare/cloudflared:latest
+    restart: unless-stopped
+    command: tunnel --no-autoupdate run 
+    environment:
+      - TUNNEL_TOKEN=eyJhIjoiNjRlYWFkZDcyODdlYjVlMzEwMWU5ZTJlNDNhNmQxZTciLCJ0IjoiOTUyOGJjYjktOTNlNi00M2NhLTk2MDgtMzJkNTllNmE2MzIwIiwicyI6IlpHRXlZall6TkRFdE9XTmpaaTAwWVRJNExUZ3pObVF0TlRSa09HWTFOVGRtWWpNNSJ9
